feat: add refresh endpoint
